--- a/cit230/index.html
+++ b/cit230/index.html
@@ -3,9 +3,12 @@
 
     <head>
         <meta charset="utf-8">
-        <title>CIT 230 Assignment Portal | David P. Laws II | BYU-Idaho</title>
+        <meta name="author" content="David Laws">
         <meta name="description" content="My personal assignment portal for CIT 230.">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+
+        <title>CIT 230 Assignment Portal | David P. Laws II | BYU-Idaho</title>
+
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
     </head>
@@ -36,6 +39,7 @@
             <li>Lesson 10: <a href="assignments/lesson-10/index-10.html">Week 10 (semi-final draft)</a></li>
             <li>Lesson 10: <a href="assignments/weathersite/index.html">Week 10: Final Weather Website (needs to be graded)</a></li>
             <li>Lesson 11: <a href="assignments/lesson-11/Lesson4/index.htm">Jquery Practice</a></li>
+            <li>Lesson 14: <a href="assignments/mountain/index.html">The Mountain Spoke</a></li>
         </ul>
     </main>
 
