--- a/thedavidlaws/styleguide.html
+++ b/thedavidlaws/styleguide.html
@@ -5,7 +5,7 @@
 
 <!-- Meta -->
 
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8">
         <meta name="author" content="David Laws">
         <meta name="description" content="David Laws Projects Page">
         <meta name="viewport" content="width=device-width,initial-scale=1">
