--- a/cit230/assignments/mountain/events.html
+++ b/cit230/assignments/mountain/events.html
@@ -100,7 +100,7 @@
     </section>
 
         <section class="footer-bar"><a href="references.html">References</a> |
-            <a href="">Overview Video</a> | &copy; 2018 David Laws | <span id="currentdate"></span>
+            <a href="http://youtu.be/3h-m7PsgOOM?hd=1">Overview Video</a> | &copy; 2018 David Laws | <span id="currentdate"></span>
         </section>
 
         </footer>
